--- a/Assignments/Assignment-Three.Rmd
+++ b/Assignments/Assignment-Three.Rmd
@@ -12,6 +12,52 @@ output:
 ```{r child="/Users/kaplan/KaplanFiles/DCF-2014/ReOrganizedJune10/CSS/DCF-common.Rmd"}
 ```
 
+
+### More on Voting
+
+In the ranked-choice ballot system, once a voter has picked a first choice candidate, there is no advantage in listing that same candidate as second or third choice.
+
+* How many people chose the same candidate for both `First` and `Second` place?
+* Of the ballots where the `First` and `Second` place choices are the same, what were the top 3 choices?
+* Of the people who selected Ole Savior for `First`, what were the top three `Second` choices?
+
+
+Within each precinct, which ward had the largest number of votes?  (Hint: Make a data table with the number of votes in each `Precinct` `Ward` combination.  Arrange this by `Precinct` and the number of votes.)
+
+### Medicare Reimbursement
+
+One way to measure the "spread" of values is with the "standard deviation."  The higher the standard deviation, the more spread out the values are.
+
+In the `MedicareCharges` data table:
+
+* Taking all the hospitals together, which DRG has the highest standard deviation in Medicare charges.
+* Taking all the DRGs together, which hospital has the highest standard deviation in Medicare charges.
+* Medicare typically pays the hospital less than was charged by the hospital.  Calculate the proportion of the charge that was paid (hint: a simple ratio), then find, 
+    * across all hospitals, which DRG has the
+        * lowest proportion
+        * highest proportion
+    * across all DRGs, which hospital has the 
+        * lowest proportion
+        * highest proportion
+        
+        
+### Zip Codes
+
+Join the zip code geography and demography:
+
+* Make a bar chart showing, for each state, the count of the population that is under 5 years old, between 5 and 18 years old, between 18 and 65 years old, and over 65.
+* Make another bar chart showing the *proportion* of the state's population that is in each of the age categories. 
+* Call a ZIP code "crowded" when the population is over 50,000.  Make a scatter plot showing the geographic location of the crowded zips.
+
+
+
+
+Pick out the 10000 zip codes with the highest population.  Make a scatter plot of the latitude versus longitude.  (Hint: `arrange()` and `head()`.)  Use color to represent the fraction of the population that is over 65.
+
+How many zip codes have a `WaterArea` that is more than 50% of the `LandArea`?  Make a scatter plot showing the geographical location of these, with color indicating the population
+
+### Not yet sorted out.
+
 Drill on data verbs:  
 * mutate(), arrange(), filter(), select()
 
